# ntrtwl-NitroSDK

./: meson.build
components/: meson.build
components/ichneumon/: ichneumon_sub.lcf.template  ichneumon_sub.lsf  meson.build
components/ichneumon/src/: dtcm.c  main.c  meson.build
include/: nitro.h
include/asm/macros/: function.inc
include/nitro/: nvram.h  spi.h
include/nitro/card/: pullOut.h
include/nitro/ctrdg/ARM7/: ctrdg_sp.h
include/nitro/hw/ARM7/: ioreg_SND.h
include/nitro/rtc/ARM7/: control.h  gpio.h  instruction.h
include/nitro/spi/ARM7/: mic.h  pm.h  spi.h  tp.h
include/nitro/wm/ARM7/: wm_sp.h
include/nitro/wm/common/: wm.h
include/nitro/wvr/ARM7/: wvr_sp.h
include/nitro_wl/ARM7/: WlBuf.h  WlCmd.h  WlCmdLabel.h  WlFrame.h  WlLib.h  WlParam.h  WlStaList.h
libraries/: meson.build
libraries/card/: meson.build
libraries/card/src/: card_pullOut_arm7.c  card_request_arm7.c  meson.build
libraries/ctrdg/: meson.build
libraries/ctrdg/src/: ctrdg_proc.c  ctrdg_proc_arm7.c  meson.build
libraries/exi/: meson.build
libraries/exi/src/: exi.c  meson.build
libraries/fs/: meson.build
libraries/init/: meson.build
libraries/init/src/: crt0.c
libraries/math/: meson.build
libraries/math/src/: meson.build
libraries/mi/: meson.build
libraries/mi/src/: meson.build  mi_wram.c
libraries/nvram/: meson.build
libraries/nvram/src/: meson.build  nvram.c
libraries/os/: meson.build
libraries/os/src/: meson.build  os_terminate_proc.c
libraries/pad/: meson.build
libraries/pad/src/: meson.build  pad.c
libraries/pxi/: meson.build
libraries/rtc/: meson.build
libraries/rtc/src/: control.c  gpio.c  instruction.c  meson.build
libraries/snd/: meson.build
libraries/snd/src/: meson.build  snd_capture.c  snd_channel.c  snd_exchannel.c  snd_global.c  snd_seq.c
libraries/spi/: meson.build
libraries/spi/src/: meson.build  mic.c  mic_arm7.c  mic_arm7_2.c  pm_arm7.c  pm_arm7_2.c  spi_arm7.c  tp.c  tp_arm7.c  tp_arm7_2.c
libraries/syscall/: meson.build
libraries/syscall/src/: subpsyscall.s
libraries/wl_arm7/: meson.build
libraries/wl_arm7/include/: ApList.h  AppBuf.h  AppTask.h  AppTimer.h  BufMan.h  CAM.h  CfgDevs.h  Compati.h  DbgChar.h  DevCmd.h  Diag.h  Dot11Frm.h  EEPROM.h  FifoCtrl.h  Flash.h  Font.h  Global.h  InclWl.h  LcdPrint.h  MA.h  MAC.h  MLME.h  Param.h  ParamCmd.h  Platform.h  Revision.h  RxCtrl.h  SCmd.h  SCmdIF.h  SysCmd.h  System.h  TaskMan.h  TxCtrl.h  WaitLoop.h  WlCmdIf.h  WlIntr.h  WlIntrTask.h  WlNic.h  WlOpe.h  WlSys.h  (+4 more)
libraries/wl_arm7/src/: ApList.c  BufMan.c  CAM.c  DevCmd.c  Diag.c  Flash.c  MA.c  MLME.c  ParamCmd.c  RxCtrl.c  TaskMan.c  TxCtrl.c  WaitLoop.c  WlCmdIf.c  WlIntr.c  WlIntrTask.c  WlNic.c  WlSys.c  meson.build  spiEeprom.c
libraries/wm/src/: meson.build  wm_sp.c
libraries/wm_arm7/: meson.build
libraries/wm_arm7/include/: wm_private.h  wmsp_mac.h  wmsp_private.h
libraries/wm_arm7/src/: meson.build  req_AutoDeAuth.c  req_AutoDisconnect.c  req_Disable.c  req_Disconnect.c  req_Enable.c  req_End.c  req_EndDCF.c  req_EndMP.c  req_EndParent.c  req_EndScan.c  req_GetWirelessCounter.c  req_InitWirelessCounter.c  req_Initialize.c  req_MeasureChannel.c  req_PowerOff.c  req_PowerOn.c  req_Reset.c  req_SetBeaconPeriod.c  req_SetBeaconTxRxInd.c  req_SetDCFData.c  req_SetEntry.c  req_SetGameInfo.c  req_SetLifeTime.c  req_SetMPData.c  req_SetMPParameter.c  req_SetParentParam.c  req_SetPowerSaveMode.c  req_SetWEPKey.c  req_StartConnect.c  req_StartDCF.c  req_StartMP.c  req_StartParent.c  req_StartScan.c  req_StartTestMode.c  req_StartTestRxMode.c  req_StopTestMode.c  req_StopTestRxMode.c  valarm_SetMPData.c  wmsp_indicate.c  (+5 more)
libraries/wvr/: meson.build
libraries/wvr/src/: meson.build  wvr_sp.c
