nitrosdk_libs = []
nitrosdk_arm7_libs = []
nitrosdk_prebuilt = []

subdir('fx')
subdir('gx')
subdir('os')
subdir('mi')
subdir('pxi')
subdir('init')
subdir('stubs')
subdir('ext')
subdir('pad')
subdir('exi')
subdir('fs')
subdir('cp')
subdir('spi')
subdir('nvram')
subdir('rtc')
subdir('wm')
subdir('wm_arm7')
subdir('wbt')
subdir('wfs')
subdir('prc')
subdir('card')
subdir('mb')
subdir('ctrdg')
subdir('math')
subdir('wvr')
subdir('snd')
subdir('utest')
subdir('std')
subdir('env')
subdir('e3s')


subdir('cht')
subdir('dgt')
subdir('syscall')


subdir('wl_arm7')
