libcard_srcs = files(
    'card_common.c',
    'card_spi.c',
    'card_backup.c',
    'card_rom.c',
    'card_request.c',
    'card_pullOut.c'
)

libcard_arm7_srcs = files(
    'card_common.c',
    'card_spi.c',
    'card_backup.c',
    'card_rom.c',
    'card_request_arm7.c',
    'card_pullOut_arm7.c',
)
