libwl_arm7_srcs = files(
    'WlSys.c',
    'TaskMan.c',
    'BufMan.c',
    'WlNic.c',
    'Diag.c',
    'WlIntr.c',
    'WlIntrTask.c',
    'CAM.c',
    'WaitLoop.c',
    'WlCmdIf.c',
    'MLME.c',
    'ParamCmd.c',
    'DevCmd.c',
    'MA.c',
    'TxCtrl.c',
    'RxCtrl.c',
    'ApList.c',
    'Flash.c',
)
