libwm_arm7_srcs = files(
    'wmsp_system.c',
    'wmsp_indicate.c',
    'wmsp_request.c',
    'wmsp_wl_control.c',
    'req_Initialize.c',
    'req_Reset.c',
    'req_End.c',
    'req_SetParentParam.c',
    'req_StartParent.c',
    'req_EndParent.c',
    'req_StartScan.c',
    'req_EndScan.c',
    'req_StartConnect.c',
    'req_Disconnect.c',
    'req_StartMP.c',
    'req_SetMPData.c',
    'req_EndMP.c',
    'req_StartDCF.c',
    'req_SetDCFData.c',
    'req_EndDCF.c',
    'req_SetWEPKey.c',
    'req_SetGameInfo.c',
    'req_SetBeaconTxRxInd.c',
    'req_StartTestMode.c',
    'req_StopTestMode.c',
    'req_SetLifeTime.c',
    'req_MeasureChannel.c',
    'req_InitWirelessCounter.c',
    'req_GetWirelessCounter.c',
    'wmsp_valarm.c',
    'valarm_SetMPData.c',
    'wmsp_port.c',
    'req_SetEntry.c',
    'req_AutoDeAuth.c',
    'req_Enable.c',
    'req_Disable.c',
    'req_PowerOn.c',
    'req_PowerOff.c',
    'req_SetMPParameter.c',
    'req_SetBeaconPeriod.c',
    'req_AutoDisconnect.c',
    'req_SetPowerSaveMode.c',
    'req_StartTestRxMode.c',
    'req_StopTestRxMode.c',
)
